Agrego cambios en html

--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
                 <img src="img/foto16.jpeg" alt="">
                 <img src="img/foto17.jpeg" alt="">
                 <img src="img/foto20.jpeg" alt="">
+                <img src="img/foto7.jpeg" alt="">
+                <img src="img/foto8.jpeg" alt="">
+                <img src="img/foto9.jpeg" alt="">
             </div>
         </div>
 
